[package]
name = "caldo_bevy"
version = "0.1.0"
authors = ["Martijn Faassen <faassen@startifact.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.4", default-features = false} 
bevy_rapier2d = { version = "0.7.0"} # features = [ "simd-stable", "parallel" ] }
rapier2d = "0.4.2"
bevy_wgpu = "0.4.0"
bevy_winit = { version = "0.4.0", features = [ "x11" ] }
nalgebra = "0.23"
# bevy_prototype_lyon = "0.1.5"
bevy_prototype_lyon = "0.2.0"
lyon_tessellation = "0.17.1"